<resources>
    <string name="app_name">Heavenly office</string>
    <string name="city">Kaluga</string>
    <string name="temperature">%1$d°</string>
    <string name="weather_img">weather</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="button1">Settings</string>
    <string name="button2">Search for a city</string>

    <string name="switch_dark">Dark theme</string>
    <string name="hello_world">Hello Round World!</string>

    <string name="title_activity_search">Search</string>
    <string name="showTheWeather">Show the weather</string>
    <string name="pressure">Pressure: %1$d mm Hg</string>
    <string name="humidity">Humidity: %1$d %%</string>

    <string name="enterTheСity">Enter the name of the city</string>
    <string name="EnableDarkTheme">Включить темную тему  </string>
    <string name="apply">Применить</string>
    <string name="splashText">Heavenly office</string>
    <string name="error_name_city_empty">Enter the name of the city</string>
    <string name="error_name_city">There are extra spaces in the city name</string>
    <string name="error_city_not_found">City not found</string>
    <string name="test">Test</string>

    <string name="action_settings">Settings</string>
    <string name="action_info">About this program</string>
    <string name="action_developer">About the developer</string>
    <string name="text_content_info">Here will be some text about how the program works, what it can do. Here will be some text about how the program works, what it can do.
    Here will be some text about how the program works, what it can do. Here will be some text about how the program works, what it can do.</string>
    <string name="text_content_developer">Here is a little text about the developer of the program. Here is a little text about the developer of the program.
    Here is a little text about the developer of the program. Here is a little text about the developer of the program.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>